--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
 </head>
 <style>
   .adlam-display-regular {
   font-family: "ADLaM Display", serif;
 }
+.sora-normal {
+  font-family: "Sora", serif;
+}
 </style>
 <body class="adlam-display-regular">
     <header>
-        <nav class="">
-            <div class="navbar bg-base-100 bg-[#FFF9F4] m-auto">
+        <nav>
+            <div class="navbar bg-base-100 bg-[#FFF9F4] m-auto px-12">
                 <div class="navbar-start">
                   <div class="dropdown hidden">
                     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -63,15 +69,29 @@
                 <div class="navbar-end gap-5">
                   <i class="fa-regular fa-bell text-xl hidden md:inline-block"></i>
                   <i class="fa-solid fa-magnifying-glass text-xl hidden md:inline-block"></i>
-                  <a class="btn btn-warning  btn-outline text-black hidden md:inline-block md:flex md:items-center md:justify-center">Log in</a>
+                  <a class="btn btn-warning  btn-outline text-black hidden md:inline-block  md:flex md:items-center md:justify-center">Log in</a>
                   <a class="btn btn-warning hidden md:inline-block md:flex md:items-center md:justify-center">Register</a>
-                  <i class="fa-solid fa-bars text-xl"></i>
+                  <i class="fa-solid fa-bars text-xl lg:hidden "></i>
                 </div>
               </div>
         </nav>
     </header>
     <main>
+        <section class="lg:px-20 px-5 my-10">
+          <div class="grid grid-cols-1 lg:flex justify-center items-center">
+            <div class="">
+              <h2 class="lg:text-6xl text-4xl">Pamper Your Pet, Because They Deserve<br>the Best</h2>
+              <p class="font-light sora-normal text-wrap">Discover a world of treats, toys, and essentials handpicked for your furry friends. Shop now and make tails wag with joy!</p>
+              <button class="btn btn-warning font-normal">Find a pet</button>
+            </div>
+            <div>
+              <img  class="w-full" src="c1-assets/cat-big.png" alt="">
+            </div>
+          </div>
+        </section>
+        <section>
 
+        </section>
     </main>
     <footer>
 
