added another section and made it responsive

--- a/index.html
+++ b/index.html
@@ -186,10 +186,12 @@
           </div>
            </div>
         </section>
-        <section class="bg-[#FFF9F4] w-[1601px]
-        h-[775px] ">
-        <h3 class="text-3xl ml-20 mb-20">Trending pet products</h3>
-          <div class="grid lg:grid-cols-4 lg:gap-96">
+        <div class="ml-20 mt-12 space-y-10">
+        <h3 class="text-3xl ">Trending pet products</h3>
+        </div>
+        <section class="lg:bg-[#FFF9F4] 
+        min-h-screen w-full flex">
+          <div class="lg:flex items-center">
             <div class="w-[424px] h-[402px] bg-[#F9DF8A] rounded-xl relative flex flex-col justify-center ml-20">
               <div class="space-y-4 mb-32">
               <h3 class="text-xl ml-4">T-shirt for dogs</h3>
@@ -199,8 +201,8 @@
               <img class="w-[50%] absolute bottom-0 right-4" src="c1-assets/cute-pet-mid.png" alt="">
             </div> 
             <!-- mini1 -->
-             <div class="grid lg:grid-cols-3 grid-cols-2 gap-3 ml-6 mt-4 col-span-3">
-            <div class=" flex  w-[275px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-3">
+             <div class="grid lg:grid-cols-3 grid-cols-2 gap-3 ml-6 mt-4 col-span-3 right-8">
+            <div class=" flex lg:w-[275px] w-[200px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-3">
               <div class="w-[86px] h-[86px] bg-[#FFF9F4] rounded-md flex items-center justify-center">
               <img src="c1-assets/dog-cartoon.png" alt="">
               </div>
@@ -213,7 +215,7 @@
               <p class=" text-gray-600">$39.99</p>
               </div>
             </div>
-            <div class=" flex  w-[275px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-3">
+            <div class=" flex  lg:w-[275px] w-[200px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-3">
               <div class="w-[86px] h-[86px] bg-[#FFF9F4] rounded-md flex items-center justify-center">
               <img src="c1-assets/fish-cartoon.png" alt="">
               </div>
@@ -226,7 +228,7 @@
               <p class=" text-gray-600">$39.99</p>
               </div>
             </div>
-            <div class=" flex  w-[275px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-3">
+            <div class=" flex  lg:w-[275px] w-[200px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-3">
               <div class="w-[86px] h-[86px] bg-[#FFF9F4] rounded-md flex items-center justify-center">
               <img src="c1-assets/cat-cartoon.png" alt="">
               </div>
@@ -239,7 +241,7 @@
               <p class=" text-gray-600">$39.99</p>
               </div>
             </div>
-            <div class=" flex  w-[275px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-3">
+            <div class=" flex  lg:w-[275px] w-[200px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-3">
               <div class="w-[86px] h-[86px] bg-[#FFF9F4] rounded-md flex items-center justify-center">
               <img src="c1-assets/bird-cartoon.png" alt="">
               </div>
@@ -252,7 +254,7 @@
               <p class=" text-gray-600">$39.99</p>
               </div>
             </div>
-            <div class=" flex  w-[275px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-3">
+            <div class=" flex  lg:w-[275px] w-[200px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-3">
               <div class="w-[86px] h-[86px] bg-[#FFF9F4] rounded-md flex items-center justify-center">
               <img src="c1-assets/mouse-cartoon.png" alt="">
               </div>
@@ -265,7 +267,7 @@
               <p class=" text-gray-600">$39.99</p>
               </div>
             </div>
-            <div class=" flex  w-[275px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-3">
+            <div class=" flex  lg:w-[275px] w-[200px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-3">
               <div class="w-[86px] h-[86px] bg-[#FFF9F4] rounded-md flex items-center justify-center">
               <img src="c1-assets/rabbit-cartoon.png" alt="">
               </div>
@@ -278,7 +280,7 @@
               <p class=" text-gray-600">$39.99</p>
               </div>
             </div>
-            <div class=" flex  w-[275px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-3">
+            <div class=" flex  lg:w-[275px] w-[200px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-3">
               <div class="w-[86px] h-[86px] bg-[#FFF9F4] rounded-md flex items-center justify-center">
               <img src="c1-assets/pet-couch.png" alt="">
               </div>
@@ -291,7 +293,7 @@
               <p class=" text-gray-600">$39.99</p>
               </div>
             </div>
-            <div class=" flex  w-[275px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-3">
+            <div class=" flex  lg:w-[275px] w-[200px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-3">
               <div class="w-[86px] h-[86px] bg-[#FFF9F4] rounded-md flex items-center justify-center">
               <img src="c1-assets/bird-cartoon.png" alt="">
               </div>
@@ -304,7 +306,7 @@
               <p class=" text-gray-600">$39.99</p>
               </div>
             </div>
-            <div class=" flex  w-[275px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-0">
+            <div class=" lg:flex hidden  w-[275px] h-[118px] p-4 rounded-xl bg-white shadow-md ml-3">
               <div class="w-[86px] h-[86px] bg-[#FFF9F4] rounded-md flex items-center justify-center">
               <img src="c1-assets/fish-cartoon.png" alt="">
               </div>
@@ -320,9 +322,34 @@
           </div>
           </div>
         </section>
+          <!-- hero section -->
+           <section class="-mt-80 lg:mt-0">
+           <h2 class="text-3xl font-bold lg:ml-36 lg:mb-10 mt-8 mx-4 ml-14 mb-6">Trending pet products</h2>
+           <div class="lg:flex gap-5 items-center justify-center grid grid-cols-1  lg:mt-14 ml-14 lg:ml-0">
+          <div class="hero lg:w-[784px] lg:h-[402px] w-[90%] h-auto rounded-xl" style="background: linear-gradient(134.71deg, rgb(248, 204, 251) 1.286%, rgb(172, 210, 253) 100%);">
+            <div class="hero-content  sm:flex-row-reverse  flex-col-reverse">
+              <img
+                src="c1-assets/cute-dog-mid.png"
+                class="transform translate-y-[-20px]  lg:w-[380px] w-[50%] lg:h-[410px] ml-10"/>
+              <div class="mr-auto mt-12">
+                <p class="font-bold text-lg ">Under price</p>
+                <h4 class="text-2xl text-lg">Pet grooming mitt</h4>
+                <p class="text-white text-lg">(Easy Hair removal)</p>
+                <h2 class="font-bold text-3xl  ">$7.99</h2>
+              </div>
+            </div>
+          </div>
+            <div class="lg:w-[424px] h-[402px] rounded-xl relative flex flex-col justify-center w-[90%]" style="background: linear-gradient(134.71deg, rgb(255, 249, 244) 1.511%, rgb(249, 223, 138) 100%);">
+              <div class="mr-auto mb-32">
+              <h3 class="text-xl ml-4">T-shirt for dogs</h3>
+              <h2 class="font-bold text-3xl ml-4">$7.99</h2>
+              </div>
+              <img class="w-[50%] absolute bottom-0 right-4" src="c1-assets/cute-pet-mid.png" alt="">
+            </div> 
+          </section>
     </main>
     <footer>
-
+      
     </footer>
 </body>
 </html>
